[gd_scene load_steps=3 format=3 uid="uid://dpm1bqbevvyb7"]

[ext_resource type="Script" path="res://objects/card_node.gd" id="1_wdlaa"]
[ext_resource type="PackedScene" uid="uid://dosulntiwpmvw" path="res://objects/card_display.tscn" id="2_2gm7b"]

[node name="CardNode" type="Node2D"]
script = ExtResource("1_wdlaa")

[node name="Card" parent="." instance=ExtResource("2_2gm7b")]

[connection signal="on_hover" from="Card" to="." method="_on_card_on_hover"]
[connection signal="selected" from="Card" to="." method="_on_card_selected"]
